<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_gps_waypoint_follower_husky</name>
  <version>1.0.0</version>
  <description>Package for robot gps localization and navigation.</description>
  <maintainer email="vpatilun@scsu.edu">Van Patiluna</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>navigation2</depend>
  <depend>robot_localization</depend>
  <depend>mapviz</depend>
  <depend>mapviz_plugins</depend>
  <depend>tile_map</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
